apache2 (2.2.4-3) unstable; urgency=low

  * make mod_authn_dbd depend on mod_dbd

 -- Stefan Fritsch <sf@debian.org>  Tue, 24 Jul 2007 23:28:26 +0200

apache2 (2.2.4-2) unstable; urgency=low

  * Modularize config: Move module specific configuration from apache2.conf
    to mods-available/*conf (Closes: #338472)
  * Remove the NO_START kludge. Now you have to use rc*.d symlinks to disable
    apache2. (Closes: #408462, #275561)
  * Create run and lock directores in apache2ctl to make it work on fresh
    installations before the first call of the init script. Together with
    the previous item, this closes: #418499
  * Disable AddDefaultCharset again (Closes: #397886)
  * Make ports.conf, conf.d/charset, and /etc/default/apache2 conffiles
    managed by dpkg
  * Listen on port 443 by default if mod_ssl is loaded (Closes: #404598)
  * Add logic to start htcacheclean as daemon or cronjob. The configuration
    is in /etc/default/apache2
  * Fix security issues:
    - CVE-2007-3304: prevent parent process to send SIGUSR1 to arbitrary
      processes
    - CVE-2006-5752: XSS in mod_status
  * Add init.d dependency info from insserv overrides to /etc/init.d/apache2
  * Replace apachectl with apache2ctl in docs (Closes: #164493)
  * Add usage message to apache2ctl (Closes: #359008)
  * Make -dev packages priority extra
  * Add secure example cipher/protocol configuration to ssl.conf
  * Update watch file (Closes: #433552)
  * Bump dh_compat to 5
  * Add new package apache2-dbg with debugging symbols
  * Fix mod_cache returning 304 instead of 200 on HEAD requests

 -- Stefan Fritsch <sf@debian.org>  Tue, 03 Jul 2007 21:23:40 +0200

apache2 (2.2.4-1) unstable; urgency=medium

  [ Stefan Fritsch ]
  * Urgency medium for security fix
  * Fix CVE-2007-1863: DoS in mod_cache
  * New upstream version (Closes: #427050)
    - Fixes "proxy: error reading status line from remote server"
      (Closes: #410331)
  * Fix CVE-2007-1862: mod_mem_cache DoS (introduced in 2.2.4)