@@ -16,6 +16,8 @@ include /usr/share/dpatch/dpatch.make
 DEB_HOST_GNU_TYPE   ?= $(shell dpkg-architecture -qDEB_HOST_GNU_TYPE)
 DEB_BUILD_GNU_TYPE  ?= $(shell dpkg-architecture -qDEB_BUILD_GNU_TYPE)
 
+LSB_RELEASE := $(shell lsb_release -i -s)
+
 CONFFLAGS += ac_cv_prog_AWK=mawk ac_cv_prog_LYNX_PATH=www-browser
 
 AP2_COMMON_CONFARGS = --enable-layout=Debian --enable-so \
@@ -191,7 +193,7 @@ install: build install-worker install-prefork install-common install-dev install
 	chmod 755 debian/apache2-utils/usr/sbin/split-logfile
 
 	cp -a debian/config-dir/* debian/apache2.2-common/etc/apache2
-	if [ "`lsb_release -i -s`" = "Ubuntu" ]; then \
+	if [ "$(LSB_RELEASE)" = "Ubuntu" ]; then \
 		sed -i -e 's/RedirectMatch/#RedirectMatch/' \
 		debian/apache2.2-common/etc/apache2/sites-available/default; \
 	fi
@@ -216,7 +218,7 @@ install: build install-worker install-prefork install-common install-dev install
 		mkdir -p debian/apache2-mpm-$$i/usr/sbin ;\
 		mkdir -p debian/apache2-mpm-$$i/usr/share/lintian/overrides ;\
 		install -m 755 $(BUILD)/$$i/apache2 debian/apache2-mpm-$$i/usr/sbin/apache2 ;\
-		if [ -n "$(DEB_BUILD_STRIP)" ] ; then \
+		if [ "$(LSB_RELEASE)" != "Ubuntu" ] && [ -n "$(DEB_BUILD_STRIP)" ] ; then \
 			objcopy --only-keep-debug debian/apache2-mpm-$$i/usr/sbin/apache2 debian/apache2-dbg/usr/lib/debug/usr/sbin/apache2-mpm-$$i ;\
 			chmod 644 debian/apache2-dbg/usr/lib/debug/usr/sbin/apache2-mpm-$$i ;\
 			dh_strip -papache2-mpm-$$i ;\
@@ -258,7 +260,11 @@ binary-arch: install
 	rm -f debian/apache2-dbg/usr/share/doc/apache2-dbg/NEWS.Debian
 	dh_installinit -a -r --name=apache2 -- start 91 09
 	dh_installcron -a -r --name=apache2
-	dh_strip -a --dbg-package=apache2-dbg -Napache2-mpm-worker -Napache2-mpm-event -Napache2-mpm-prefork -Napache2-dbg
+	if [ "$(LSB_RELEASE)" = "Ubuntu" ]; then \
+		dh_strip -a; \
+	else \
+		dh_strip -a --dbg-package=apache2-dbg -Napache2-mpm-worker -Napache2-mpm-event -Napache2-mpm-prefork -Napache2-dbg; \
+	fi
 	dh_link -a
 	dh_compress -a
 	dh_fixperms -a -Xsuexec
@@ -270,6 +276,11 @@ binary-arch: install
 	dh_shlibdeps -a
 	dh_gencontrol -a
 	dh_md5sums -a
-	dh_builddeb -a
+	if [ "$(LSB_RELEASE)" = "Ubuntu" ]; then \
+		rm -rf debian/apache2-dbg; \
+		dh_builddeb -a -Napache2-dbg; \
+	else \
+		dh_builddeb -a; \
+	fi
 
 binary: binary-arch binary-indep
