@@ -1,8 +1,13 @@
 apache2 (2.2.4-3) unstable; urgency=low
 
+  [ Stefan Fritsch ]
   * make mod_authn_dbd depend on mod_dbd
 
- -- Stefan Fritsch <sf@debian.org>  Tue, 24 Jul 2007 23:28:26 +0200
+  [ Adam Conrad ]
+  * Special case apache2-dbg magic in debian/rules, so we don't do
+    this on Ubuntu, which has an archive of detached debug packages.
+
+ -- Adam Conrad <adconrad@0c3.net>  Wed,  1 Aug 2007 18:46:46 +1000
 
 apache2 (2.2.4-2) unstable; urgency=low
 
